--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,10 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+<ion-header>
+  <ion-toolbar style="text-align: center;">
+    <ion-buttons slot="start" style="padding-left: 6vw;">
+      <img style="width: 9.5vw ;" src="./assets/img/logo.png" alt="">
+    </ion-buttons>
+    <ion-buttons slot="end" style="padding-right: 7vw;">
+      <i style="font-size: 190%;" class="fas fa-user-circle"></i>
+    </ion-buttons>
+    <ion-title>Mi Chiapas</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content [fullscreen]="true">
+  <ion-row>
+    <ion-col size="12" style="text-align: center;">
+      <h2>
+        Bienvenido
+      </h2>
+    </ion-col>
+  </ion-row>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
