--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,24 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+  <ion-tab-bar  slot="bottom">
+    <ion-tab-button tab="menu">
+      <i  style="font-size: 220%;" class="fas fa-bars"></i>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="notificaciones">
+      <i  style="font-size: 220%;" class="fas fa-bell"></i>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="home">
+      <i style="font-size: 220%;" class="fas fa-home"></i>
+    </ion-tab-button>
+
+    <ion-tab-button tab="visitas-reservaciones">
+      <i style="font-size: 220%;" class="fas fa-car-side"></i>
+      <!-- <img  src="./assets/icon/car-viajes.png" style="width: 47%;" alt=""> -->
+    </ion-tab-button>
+    <ion-tab-button  tab="perfil">
+      <i style="font-size: 220%;" class="fas fa-user"></i>
     </ion-tab-button>
   </ion-tab-bar>
 
