imagenes del centro turistico

--- a/src/app/modulos/componentes/inicio-sesion/inicio-sesion.page.scss
+++ b/src/app/modulos/componentes/inicio-sesion/inicio-sesion.page.scss
@@ -1,4 +1,4 @@
 ion-content.background{
-    --background: url(https://www.contrareplica.mx/uploads/2019/03/12/normal/f7d6d6aae5df2b2e3045fdeb13bcfe3f.jpg) 0 0/100% 100% no-repeat;
+    --background: url("/assets/img/cañon.jpg") 0 0/100% 100% no-repeat;
     
 }
