cambios en la vista en el componente centro turisticos

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar style="text-align: center;">
+  <ion-toolbar style=" text-align: center;">
     <ion-buttons slot="start" style="padding-left: 6vw;">
-      <img style="width: 9.5vw ;" src="./assets/img/logo.png" alt="">
+      <img style="width: 8vw ;" src="./assets/img/logo.png" alt="">
     </ion-buttons>
     <ion-buttons slot="end" style="padding-right: 7vw;">
-      <i style="font-size: 190%;" class="fas fa-user-circle"></i>
-    </ion-buttons>
-    <ion-title>Mi Chiapas</ion-title>
+      <i style="font-size: 180%;" class="fas fa-user-circle"></i>
+    </ion-buttons>  
+      <img style="width: 38vw; "  src="./assets/img/miChiapas1.svg" alt="">
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
@@ -20,8 +20,7 @@
 
   <ion-row style="padding-top: 5%;">
     <ion-col size="6" class="contenedor">
-      <img style="width: 51vw;" src=" "
-        alt="">
+      <img style="width: 47vw;" src="https://cdn.mexicodestinos.com/tours/snorkelchiapas1.jpg" alt="">
       <div class="centrado">Centros Turisticos</div>
     </ion-col>
     <ion-col size="6" class="contenedor">
