--- a/src/app/modulos/componentes/centros-turistico/centros-turistico.page.scss
+++ b/src/app/modulos/componentes/centros-turistico/centros-turistico.page.scss
@@ -1,33 +1,14 @@
-img {
+.im-class {
     width: 100vw;
-    height: 15vh;
-    border-radius: 25px;
+    height: 25vh
 }
 
-.contenedor {
+.tex-img {
     position: relative;
-    display: inline-block;
-    text-align: center;
-    padding: 0;
-}
-
-.centrado {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-weight: bold;
-    font-size: 5VW;
-    background-color: rgb(0, 0, 0, 0.5);
-    width: 100vw;
-    height: 5vh;
-    display: flex;
-    align-items: center;
-    justify-content: center
-}
-.hijo {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: normal;
+    bottom:34px;
+    color:#fff;
+    background-color:rgb(0, 0, 0, 0.5);
+    padding:2px 10px;
+    font-size: 13pt;
+    font-weight:bold;
 }
