--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,23 +1,34 @@
 <ion-header>
-  <ion-toolbar style="text-align: center;">
+  <ion-toolbar style=" text-align: center;">
     <ion-buttons slot="start" style="padding-left: 6vw;">
-      <img style="width: 9.5vw ;" src="./assets/img/logo.png" alt="">
+      <img style="width: 8vw ;" src="./assets/img/logo.png" alt="">
     </ion-buttons>
     <ion-buttons slot="end" style="padding-right: 7vw;">
-      <i style="font-size: 190%;" class="fas fa-user-circle"></i>
-    </ion-buttons>
-    <ion-title>Mi Chiapas</ion-title>
+      <i style="font-size: 180%;" class="fas fa-user-circle"></i>
+    </ion-buttons>  
+      <img style="width: 38vw; "  src="./assets/img/miChiapas1.svg" alt="">
   </ion-toolbar>
 </ion-header>
+
 <ion-content [fullscreen]="true">
   <ion-row>
     <ion-col size="12" style="text-align: center;">
-      <h2>
-        Bienvenido
-      </h2>
+      <h1 style="font-family: Arial, Helvetica, sans-serif;" >
+       Alertas
+      </h1>
     </ion-col>
   </ion-row>
 
 <ion-content [fullscreen]="true">
+
+  <div class="notification">
+    <span class="icon">
+        <i class=""></i>
+    </span>
+    <span class="text"></span>
+    <span class="close">
+        <i class="fa fa-close"></i>
+    </span>
+</div>
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
