--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,14 +1,15 @@
 <ion-header>
-  <ion-toolbar style="text-align: center;">
+  <ion-toolbar style=" text-align: center;">
     <ion-buttons slot="start" style="padding-left: 6vw;">
-      <img style="width: 9.5vw ;" src="./assets/img/logo.png" alt="">
+      <img style="width: 8vw ;" src="./assets/img/logo.png" alt="">
     </ion-buttons>
     <ion-buttons slot="end" style="padding-right: 7vw;">
-      <i style="font-size: 190%;" class="fas fa-user-circle"></i>
-    </ion-buttons>
-    <ion-title>Mi Chiapas</ion-title>
+      <i style="font-size: 180%;" class="fas fa-user-circle"></i>
+    </ion-buttons>  
+      <img style="width: 38vw; "  src="./assets/img/miChiapas1.svg" alt="">
   </ion-toolbar>
 </ion-header>
+
 <ion-content [fullscreen]="true">
   <ion-row>
     <ion-col size="12" style="text-align: center;">
