--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -3,13 +3,20 @@
     <ion-buttons slot="start" style="padding-left: 6vw;">
       <img style="width: 8vw ;" src="./assets/img/logo.png" alt="">
     </ion-buttons>
-    <ion-buttons slot="end" style="padding-right: 7vw;">
+    <ion-buttons slot="end" style="padding-right: 7vw;" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
       <i style="font-size: 180%;" class="fas fa-user-circle"></i>
     </ion-buttons>  
-      <img style="width: 38vw; "  src="./assets/img/miChiapas1.svg" alt="">
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>
+        <mat-icon>account_circle</mat-icon>
+        <span>Cerrar Sesion</span>
+      </button> 
+    </mat-menu>
+    <img style="width: 38vw; " src="./assets/img/miChiapas1.svg" alt="">
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
+  
   <ion-row>
     <ion-col size="12" style="text-align: center;">
       <h2>
