--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,24 +1,99 @@
-<ion-header>
-  <ion-toolbar style=" text-align: center;">
-    <ion-buttons slot="start" style="padding-left: 6vw;">
-      <img style="width: 8vw ;" src="./assets/img/logo.png" alt="">
-    </ion-buttons>
-    <ion-buttons slot="end" style="padding-right: 7vw;">
-      <i style="font-size: 180%;" class="fas fa-user-circle"></i>
-    </ion-buttons>  
-      <img style="width: 38vw; "  src="./assets/img/miChiapas1.svg" alt="">
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-row>
-    <ion-col size="12" style="text-align: center;">
-      <h2>
-        Bienvenido
+
+  <div>
+    <img style="height: 30vh; width: 100vw;"
+      src="https://besthqwallpapers.com/Uploads/10-4-2020/128308/thumb2-material-design-blue-and-turquoise-geometric-shapes-lollipop-lines.jpg"
+      alt="">
+    <img class="img-perfil" src="https://i.pinimg.com/originals/4c/68/32/4c68325818a28e7c849a174086edf39e.jpg" alt="">
+
+  </div>
+  <ion-row style="padding-top: 4vh;">
+    <ion-col size="11" style="padding-left: 5vw;">
+      <h2 style="padding: 0; margin: 0;">
+        Gerardito Nucamendi
       </h2>
+      <ion-label>Tuxtla Gutierrez, Chis.</ion-label><br>
+      <ion-label> Correo: r3uz12@hotmail.com</ion-label><br>
+      <ion-label> Estudio en Houston, Texas </ion-label>
     </ion-col>
   </ion-row>
 
-<ion-content>
+  <ion-row style="padding-top: 2vh;">
+    <ion-col size="12">
+      <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
+        <mat-tab label="Biografia">
+          <p style="margin-left: 8px; margin-right: 8px; text-align: justify;">
+            Mi nombre es Luis Gerardo, naci el 29 de Diciembre de 1994, en la ciudad de Tuxtla Gutierrez, Chis.
+            Mis pasatiempo favoritos es jugar video juegos, hacer ejercicio, escuchar musica, aprender nuevas cosas en
+            mi rama como desarrollodar de Front-End.
+          </p>
+        </mat-tab>
+        <mat-tab label="Experencias">
+          <ion-row>
+            <ion-col size="12">
+              <p style="margin-left: 8px; margin-right: 8px; text-align: justify; margin-top: 8px; font-size: 16px;">
+                Zoomat </p>
+              <img class="img-comentarios"
+                src="https://i.pinimg.com/originals/4c/68/32/4c68325818a28e7c849a174086edf39e.jpg" alt="">
+             
+                Excelente servicio, muy buena selecion de vinos ademas de la esmerada atencion del cuerpo de empleados.
+              
+            </ion-col>
+          </ion-row>
+        </mat-tab>
+        <mat-tab label="Fotos">
+          <ion-row>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://www.viajeporchiapas.com/Imagenes/Articulos/zoomat-te-va-a-encantar.png" alt="">
+            </ion-col>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://i1.wp.com/www.sendamaya.com/wp-content/uploads/post-ZOOMAT.jpg?resize=800%2C600&ssl=1"
+                alt="">
+            </ion-col>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://media.iatiseguros.com/wp-content/uploads/2017/09/04004808/ruinas-mayas-riviera-yucatan-chichen-itza.jpg"
+                alt="">
+            </ion-col>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://www.viajeporchiapas.com/Imagenes/Articulos/zoomat-te-va-a-encantar.png" alt="">
+            </ion-col>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://i1.wp.com/www.sendamaya.com/wp-content/uploads/post-ZOOMAT.jpg?resize=800%2C600&ssl=1"
+                alt="">
+            </ion-col>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://media.iatiseguros.com/wp-content/uploads/2017/09/04004808/ruinas-mayas-riviera-yucatan-chichen-itza.jpg"
+                alt="">
+            </ion-col>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://www.viajeporchiapas.com/Imagenes/Articulos/zoomat-te-va-a-encantar.png" alt="">
+            </ion-col>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://i1.wp.com/www.sendamaya.com/wp-content/uploads/post-ZOOMAT.jpg?resize=800%2C600&ssl=1"
+                alt="">
+            </ion-col>
+            <ion-col size="4">
+              <img class="img-fotos"
+                src="https://media.iatiseguros.com/wp-content/uploads/2017/09/04004808/ruinas-mayas-riviera-yucatan-chichen-itza.jpg"
+                alt="">
+            </ion-col>
+          </ion-row>
 
-</ion-content>
+        </mat-tab>
+      </mat-tab-group>
+    </ion-col>
+  </ion-row>
+
+
+
+  <ion-content>
+
+  </ion-content>
