--- a/src/global.scss
+++ b/src/global.scss
@@ -11,13 +11,13 @@
 
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
-@import "@fortawesome/fontawesome-free/css/all.css"; 
+@import "@fortawesome/fontawesome-free/css/all.css";
 
 /* Basic CSS for apps built with Ionic */
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -25,3 +25,27 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.toastRedondo {
+    --background: black;
+    opacity: 0.7;
+    --width: 70vw;
+    text-align: center;
+    color: white;
+    font-size: 74%;
+    --border-radius: 25px;
+    --box-shadow: none;
+}
+
+.color-toast {
+    position: relative;
+    --background: black;
+    opacity: 0.7;
+    --width: 70vw;
+    text-align: center;
+    color: white;
+    font-size: 74%;
+    --border-radius: 25px;
+    --box-shadow: none;
+    z-index: 1 !important;
+}
