--- a/src/app/modulos/componentes/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/modulos/componentes/inicio-sesion/inicio-sesion.page.html
@@ -1,69 +1,70 @@
+<ion-content style="padding-left: 4 vw; padding-right: 4vw;" scroll-y="false">
 
-<ion-content class="background" scroll-y="true" style="padding-left: 4 vw; padding-right: 4vw;">
-  <ion-label style="color: white  ; float: right; padding-right: 4vw; padding-top: 2vh; font-size: 130%;">
-    Registrarse
-  </ion-label>
-  <div style="width: 100%; text-align: center; padding-top: 10%;">
-    <div style="width: 100vw;">
-      <img style="width: 50vw;" src="./assets/img/logo.png" alt="">
-    </div>
-  </div>
-  <form [formGroup]="inicioSesion" >
-    <ion-item lines="none"
-      style="color: #FFFFFF80; padding-top: 4vh; opacity:0.8;margin-left: 10vw; margin-right: 10vw; border-bottom: 1px solid black">
-      <ion-label position="floating" style="  color: black; opacity: 1;">E-mail</ion-label>
-      <ion-input formControlName="correo" type="text"></ion-input>
-      <ion-icon style="color: black;" name="mail" slot="start"></ion-icon>
-    </ion-item>
-    <br>
-    <ion-item lines="none" style="opacity:0.8;  margin-left: 10vw; margin-right: 10vw; border-bottom: 1px solid black">
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input formControlName="password" type="password"></ion-input>
-      <ion-icon style="color: black;" name="lock-closed" slot="start"></ion-icon>
-    </ion-item>
 
-    <ion-row style="text-align: center; padding-top: 3%; margin-left: 10vw; margin-right: 10vw; ">
+  <ion-row style=" width: 100%; text-align: center; padding-top: 30%;">
+    <ion-col size="12">
+      <img style="width: 35vw;" src="./assets/img/logo.png" alt="">
+    </ion-col>
+  </ion-row>
+
+  <ion-grid fixed style="padding-right: 10vw; padding-left: 10vw;">
+    <form [formGroup]="inicioSesion">
+      <ion-item lines="none" style=" padding-top: 10%; border-bottom: 1px solid black">
+        <ion-label position="floating" style="  color: black;">E-mail</ion-label>
+        <ion-input formControlName="correo" type="text"></ion-input>
+        <ion-icon style="color: black;" name="mail" slot="start"></ion-icon>
+      </ion-item>
+
+      <ion-item lines="none" style="padding-top: 5%; border-bottom: 1px solid black">
+        <ion-label position="floating">Password</ion-label>
+        <ion-input formControlName="password" type="password"></ion-input>
+        <ion-icon style="color: black;" name="lock-closed" slot="start"></ion-icon>
+      </ion-item>
+
+      <ion-row style="padding-top: 8px; ">
+        <ion-col size="12">
+          <ion-label style="float: right;  color:black;">¿Did you forget your password?</ion-label>
+        </ion-col>
+      </ion-row>
+    </form>
+    <ion-row style="text-align: center; padding-top: 20px;  ">
       <ion-col size="12">
-        <ion-button (click)="formularioInicio()" style="--background: red; font-weight: bold; " expand="full" shape="round">Iniciar Sesion
+        <ion-button (click)="formularioInicio()" style="--background: red; font-weight: bold; " expand="full"
+          shape="round">Login
         </ion-button>
       </ion-col>
     </ion-row>
 
-  </form>
+    <br>
 
-  <ion-row style="padding-top: 4%; margin-left: 10vw; margin-right: 10vw; ">
-    <ion-col size="12">
-      <ion-label style="float: right; font-weight: bold; color: white;">¿Olvidaste la contraseña?</ion-label>
-    </ion-col>
-  </ion-row>
+    <h2>
+      <span>
+        OR
+      </span>
+    </h2>
 
-  <ion-row style="text-align: center; padding-top: 5vh; margin-left: 10vw; margin-right: 10vw; ">
-    <ion-col size="12" style="background: #3B66C4; margin: 4px;">
-      <i style="padding-left: 3vw; font-size: 200%; color: white; float: left; " class="fab fa-facebook-f"></i>
-      <ion-label
-        style="padding-left: 6vw; padding-top: 0.5vh; font-size: 20px; color: white; float: left; font-weight: bold;">
-        Login whit Faceboock</ion-label>
-    </ion-col>
-  </ion-row>
-  <ion-row style="text-align: center; padding-top: 1vh; margin-left: 10vw; margin-right: 10vw; ">
-    <ion-col size="12" style="background:#CF4332; margin: 4px;">
-      <i style="padding-left: 3vw; font-size: 200%; color: white; float: left; " class="fab fa-google-plus-g"></i>
-      <ion-label
-        style="padding-left: 4vw; padding-top: 0.5vh; font-size: 20px; color: white; float: left; font-weight: bold;">
-        Sing whit Google+</ion-label>
-    </ion-col>
-  </ion-row>
+    <ion-row style="text-align: center; padding-top: 3%;">
+      <ion-col size="12">
+        <i style="font-size: 250%; color: #3b5998;" class="fab fa-facebook"></i>
+        <i style="  margin-left: 3%; font-size: 250%; color: #dd4b39;" class="fab fa-google-plus"></i>
+      </ion-col>
+    </ion-row>
+
+
+  </ion-grid>
+
+
 
   <!-- <ion-row style=" text-align: center; padding-top: 3vh; margin-left: 10vw; margin-right: 10vw; " >
       <ion-col size="12">
         <i  style="font-size: 250%;" class="fas fa-sign-out-alt"></i>
       </ion-col>
     </ion-row> -->
-  <ion-row style=" top: 92vh; position: fixed; margin-left: 10vw; margin-right: 10vw; ">
+  <!-- <ion-row style=" top: 92vh; position: fixed; margin-left: 10vw; margin-right: 10vw; ">
     <ion-col size="12">
-      <ion-label style="font-size: 1em; opacity: 0.8;  color: white;">
+      <ion-label style="font-size: 1em; opacity: 0.8;  color:black;">
         © 2020 StuffDevSolutions.
       </ion-label>
-    </ion-col>
-  </ion-row>
+    </ion-col> 
+  </ion-row> -->
 </ion-content>
